[package]
name = "booking-rooms"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.24"
colored = "2.0.0"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
url = "*"
prettytable="*"

[[bin]]
name = "booking"
path = "src/main.rs"
